AUS-3200 Prevent sidebar buttons moving into 2 rows when scrollbar appears in Firefox

--- a/ui/src/app/layout/modelview/components/sidebar/sidebar.component.scss
+++ b/ui/src/app/layout/modelview/components/sidebar/sidebar.component.scss
@@ -4,9 +4,9 @@ $topnav-background-color: #222;
     position: fixed;
     z-index: 1000;
     top: 56px;
-    left: 335px;
-    width: 335px;
-    margin-left: -335px;
+    left: 340px;
+    width: 340px;
+    margin-left: -340px;
     border: none;
     border-radius: 0;
     overflow-y: auto;
